@@ -5,6 +5,7 @@ palettes:
       - color: {index: 0, r: 0, g: 0, b: 0}
       - color: {index: 1, r: 255, g: 255, b: 255}
       - color: {index: 2, r: 181, g: 49, b: 33}
+      - color: {index: 3, r: 173, g: 173, b: 173}
     images: automatic
   - name: grid_palette
     images: automatic
